--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,15 @@
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.8",
     "framer-motion": "^11.18.1",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-jwt": "^1.2.2",
     "react-leaflet": "^4.2.1",
